all img prof and sketch tea

--- a/Site/profissionais.html
+++ b/Site/profissionais.html
@@ -133,27 +133,27 @@
     <section class="prof" id="sec-prof">
         <div class="prof__psico opcao-p">
             <div class="profissional">
-                <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Silvia biscaro</h2>
+                <img src="imagens/prof/silvia biscaro.jpg" alt="">
+                <h2 class="prof-titulo">Silvia Biscaro</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <img src="imagens/simbolo-da-psicologia.png" alt="">
+                <img src="imagens/prof/Fatima.jpeg" alt="">
                 <h2 class="prof-titulo">Fatima Averaldo</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <img src="imagens/simbolo-da-psicologia.png" alt="">
-                <h2 class="prof-titulo">Gisele </h2>
+                <img src="imagens/prof/Gisele.jpg" alt="">
+                <h2 class="prof-titulo">Gisele Ceciliano</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <img src="imagens/simbolo-da-psicologia.png" alt="">
+                <img src="imagens/prof/Cecylle.jpg" alt="">
                 <h2 class="prof-titulo">Cecylle Cavalca</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <img src="imagens/simbolo-da-psicologia.png" alt="">
+                <img src="imagens/prof/Ricardo.jpeg" alt="">
                 <h2 class="prof-titulo">Ricardo Patricio</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -161,12 +161,12 @@
 
         <div class="prof__pintura opcao-p">
             <div class="profissional">
-                <img src="imagens/pint.png" alt="">
+                <img src="imagens/prof/Caio_Germano.jpg" alt="">
                 <h2 class="prof-titulo">Caio Germano</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <img src="imagens/pint.png" alt="">
+                <img src="imagens/prof/Aline_Pinho.jpg" alt="">
                 <h2 class="prof-titulo">Aline Pinho</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -174,12 +174,12 @@
 
         <div class="prof__mass opcao-p">
             <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">
+                <img src="imagens/prof/Maria_bernini.jpg" alt="">
                 <h2 class="prof-titulo">Maria Bernini</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
             <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">
+                <img src="imagens/prof/Laura.jpeg" alt="">
                 <h2 class="prof-titulo">Laura Borges</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -187,7 +187,7 @@
 
         <div class="prof__mod opcao-p">
             <div class="profissional">
-                <img src="imagens/pottery.png" alt="">
+                <img src="imagens/prof/Aline_Pinho.jpg" alt="">
                 <h2 class="prof-titulo">Aline Pinho</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -195,7 +195,7 @@
 
         <div class="prof__yoga opcao-p">
             <div class="profissional">
-                <img src="imagens/yoga.png" alt="">
+                <img src="imagens/prof/Bia_dias.jpg" alt="">
                 <h2 class="prof-titulo">Bia Dias</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -203,7 +203,7 @@
 
         <div class="prof__danca opcao-p">
             <div class="profissional">
-                <img src="imagens/belly.png" alt="">
+                <img src="imagens/prof/Tuti.jpeg" alt="">
                 <h2 class="prof-titulo">Rudilene Tuti</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -211,7 +211,7 @@
 
         <div class="prof__const opcao-p">
             <div class="profissional">
-                <img src="imagens/img_202988.png" alt="">
+                <img src="imagens/prof/silvia biscaro.jpg" alt="">
                 <h2 class="prof-titulo">Silvia Biscaro</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -219,7 +219,7 @@
 
         <div class="prof__acun opcao-p">
             <div class="profissional">
-                <img src="imagens/acupuncture-needles.svg" alt="">
+                <img src="imagens/prof/Ana_Cristina.jpg" alt="">
                 <h2 class="prof-titulo">Ana Cristina</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
@@ -227,8 +227,8 @@
 
         <div class="prof__canto opcao-p">
             <div class="profissional">
-                <img src="imagens/Singer.svg.png" alt="">
-                <h2 class="prof-titulo">Yago Correa</h2>
+                <img src="imagens/prof/Hiago.jpeg" alt="">
+                <h2 class="prof-titulo">Hiago Correa</h2>
                 <h3 class="prof-desc">Lorem ipsum dolor sit amet consectetur</h3>
             </div>
         </div>
