--- a/Site/chas.html
+++ b/Site/chas.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/chas.css">
-    <title>Chás</title>
-</head>
-<body>
-    <header id="header">
-        <img src="imagens/index/mobile/logo-header.png" alt="">
-        <div class="nome-logo">
-            <h1>Alecrim Florido</h1>
-            <h3>Terapias Cursos e Produtos</h3>
-      </div>
-      <nav id="nav">
-        <button id="btn-menu">
-            <span class="ham"></span>    
-        </button>
-        <ul class="menu">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="index.html#ActiveSec">Atividades</a></li>
-            <li><a href="/profissionais.html">Profissionais</a></li>
-            <li><a href="/">Chás</a></li>
-            <li><a href="index.html#MapSec">Como Chegar?</a></li>
-            <li><a href="index.html#InfoSec">Contato</a></li>
-            <li><a href="https://www.instagram.com/_alecrim.store_/">Loja</a></li>
-        </ul>
-     </nav>
-    </header>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/chas.css">
+        <title>Chás</title>
+    </head>
+    <body>
+        <header id="header">
+            <img src="imagens/index/mobile/logo-header.png" alt="">
+            <div class="nome-logo">
+                <h1>Alecrim Florido</h1>
+                <h3>Terapias Cursos e Produtos</h3>
+        </div>
+        <nav id="nav">
+            <button id="btn-menu">
+                <span class="ham"></span>    
+            </button>
+            <ul class="menu">
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html#ActiveSec">Atividades</a></li>
+                <li><a href="/profissionais.html">Profissionais</a></li>
+                <li><a href="/">Chás</a></li>
+                <li><a href="index.html#MapSec">Como Chegar?</a></li>
+                <li><a href="index.html#InfoSec">Contato</a></li>
+                <li><a href="https://www.instagram.com/_alecrim.store_/">Loja</a></li>
+            </ul>
+        </nav>
+        </header>
 
-    <section class="sec-cha grid" id="sec-cha-1">
-            <div id="l-side-img-sec1">
+        <section class="sec-cha grid" id="sec-cha-1">
+                <div id="l-side-img-sec1">
+                </div>
+                <div class="text">
+                    <h1 class="titulo-cha">Cha Verde</h1>
+                    <h2  class="desc-cha">Lorem ipsum dolor sit amet.</h2>
+                    <h3  class="texto-cha">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta praesentium officiis, sequi magnam deleniti!</h3>
+                </div>
+                <div id="r-side-1-img-sec1">
+                </div>
+                <div id="r-side-2-img-sec1">
+            </div>
+        </section>
+        <section class="sec-cha grid" id="sec-cha-2">
+            <div id="l-side-top-sec2">
+            </div>
+            <div id="l-side-bottom-sec2">
             </div>
             <div class="text">
                 <h1 class="titulo-cha">Cha Verde</h1>
                 <h2  class="desc-cha">Lorem ipsum dolor sit amet.</h2>
                 <h3  class="texto-cha">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta praesentium officiis, sequi magnam deleniti!</h3>
             </div>
-            <div id="r-side-1-img-sec1">
+            <div id="r-side-sec2">
             </div>
-            <div id="r-side-2-img-sec1">
-        </div>
-    </section>
-    <section class="sec-cha grid" id="sec-cha-2">
-        <div id="l-side-top-sec2">
-        </div>
-        <div id="l-side-bottom-sec2">
-        </div>
-        <div class="text">
-            <h1 class="titulo-cha">Cha Verde</h1>
-            <h2  class="desc-cha">Lorem ipsum dolor sit amet.</h2>
-            <h3  class="texto-cha">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta praesentium officiis, sequi magnam deleniti!</h3>
-        </div>
-        <div id="r-side-sec2">
-        </div>
-    </section>
-    <section class="sec-cha grid" id="sec-cha-3">
-        <div id="l-side-sec3">
-        </div>
-        <div class="text">
-            <h1 class="titulo-cha">Cha Verde</h1>
-            <h2  class="desc-cha">Lorem ipsum dolor sit amet.</h2>
-            <h3  class="texto-cha">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta praesentium officiis, sequi magnam deleniti!</h3>
-        </div>
-        <div id="r-side-bottom-sec3">
-        </div>
-    </section>
-</body>
+        </section>
+        <section class="sec-cha grid" id="sec-cha-3">
+            <div id="l-side-sec3">
+            </div>
+            <div class="text">
+                <h1 class="titulo-cha">Cha Verde</h1>
+                <h2  class="desc-cha">Lorem ipsum dolor sit amet.</h2>
+                <h3  class="texto-cha">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim dicta praesentium officiis, sequi magnam deleniti!</h3>
+            </div>
+            <div id="r-side-bottom-sec3">
+            </div>
+        </section>
+    </body>
 </html>
