events and img home add

--- a/Site/index.html
+++ b/Site/index.html
@@ -41,7 +41,9 @@
                     </svg> 
                 </a>
         </button>
-                <div class="ret"></div> 
+                <div class="ret">
+                    
+                </div> 
             <div class="eclipse"></div>    
         </section>
 
@@ -665,6 +667,27 @@
                 </div>                 
             </div>
             
+        </section>
+
+        <section class="events" id="EventsSec">
+            <h2>Proximos eventos</h2>
+            <div class="events-imgs">
+                <div class="evento-img">
+                    <img src="imagens/Events/Arte Principal.jpg" alt="">
+                </div>
+                <div class="evento-img">
+                    <img src="imagens/Events/cake_off.jpg" alt="">
+                </div>
+                <div class="evento-img">
+                    <img src="imagens/Events/cantare.jpg" alt="">
+                </div>
+                <div class="evento-img">
+                    <img src="imagens/Events/verde_em_vc.jpg" alt="">
+                </div>
+                <div class="evento-img">
+                    <img src="imagens/Events/agenda.jpg" alt="">
+                </div>
+        </div>
         </section>
 
         <footer>
