--- a/Site/index.html
+++ b/Site/index.html
@@ -7,6 +7,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="icon" type="image/x-icon" href="/Site/imagens/fav.ico">
         
     </head>
     <body>
