--- a/Site/profissionais.html
+++ b/Site/profissionais.html
@@ -7,6 +7,7 @@
         <title>Profissionais</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="css/profissionais.css">
+        <link rel="icon" type="image/x-icon" href="/Site/imagens/fav.ico">
     </head>
     <body>
         <header id="header">
@@ -20,9 +21,9 @@
                 <span class="ham"></span>    
             </button>
             <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#ActiveSec">Atividades</a></li>
-                <li><a href="/profissionais.html">Profissionais</a></li>
+                <li><a href="profissionais.html">Profissionais</a></li>
                 <li><a href="index.html#MapSec">Como Chegar?</a></li>
                 <li><a href="index.html#InfoSec">Contato</a></li>
                 <li><a href="https://www.instagram.com/_alecrim.store_/">Loja</a></li>
@@ -62,7 +63,7 @@
 
                             <a href="#" class="opcao">
                                 <div class="conteudo-opcao">
-                                    <img src="imagens/img_202988.pngx" alt="">
+                                    <img src="imagens/massage.png" alt="">
                                     <div class="textos">
                                         <h2 class="titulo">Massagem</h2>
                                     </div>
@@ -98,7 +99,7 @@
 
                             <a href="#" class="opcao">
                                 <div class="conteudo-opcao">
-                                    <img src="imagens/index/mobile/logo-header.png" alt="">
+                                    <img src="imagens/family-tree.png" alt="">
                                     <div class="textos">
                                         <h2 class="titulo">Constelacao</h2>
                                     </div>
