h1 e footer text fix

--- a/Site/index.html
+++ b/Site/index.html
@@ -34,7 +34,7 @@
             
         <section class="inicio"  id="InicioSec">
             <h1>Alecrim Florido</h1>
-            <h4>"Após 10 anos de existência o Alecrim floriu. Desde de 1° de agosto de 2011 cuidando da sua saúde e bem estar"</h4>
+            <h4>"Após 10 anos cuidando da sua saúde e bem-estar na cidade de Guaratinguetá, o Alecrim Floriu. Numa atmosfera aconchegante com tons verdes e muita paz, você se conecta com a natureza e consigo mesmo"</h4>
         <button id="inicio-btn">
                 <a href="#ActiveSec">
                     <svg width="80" height="80" viewBox="0 0 80 80" href="#ActiveSec" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -699,7 +699,7 @@
                 <h3>Terapias Cursos e Produtos</h3>
             </div>
         </div>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt facilisis nuncLorem ipsum dolor sit amet, consectetur adipiscing.</h4>
+            <h4>No Alecrim você encontra atividades para o seu desenvolvimento pessoal, emocional e mental, retirando você da rotina do dia-a-dia.</h4>
             <h5>© 2022 Caio Severino. All rights reserved.</h5>
         </footer>
     </body>
